Dialog Fragment added

--- a/app/src/main/res/layout/task_items.xml
+++ b/app/src/main/res/layout/task_items.xml
@@ -7,7 +7,8 @@
     <TextView
         android:id="@+id/taskName_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
     <TextView
         android:id="@+id/taskDetails_textview"
